--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,22 +6,37 @@
 #use local files as volumes
 #install extensions
 #add vhost
+#add container ip
 
-apache-php:
-  build: ./apache-php
-  dockerfile: dockerfile
-  ports:
-    - "8080:80"
-    - "886:443"
-  volumes:
-    - ./repositories/shopware:/var/www/shopware
+version: '2'
 
-db:
-  image: mysql
-  ports:
-    - "6612:3306"
-  environment:
-    MYSQL_ROOT_PASSWORD: 123456
-    MYSQL_USER: dev
-    MYSQL_PASSWORD: 123456
-    MYSQL_DATABASE: shopware
+services:
+  apache-php:
+    build: ./apache-php
+    ports:
+      - "8080:80"
+      - "886:443"
+    networks:
+      static-network:
+        ipv4_address: 172.16.238.10
+        ipv6_address: 2001:3984:3989::10
+    volumes:
+      - ./repositories/shopware:/var/www/shopware
+
+  db:
+    image: mysql
+    ports:
+      - "6612:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: 123456
+      MYSQL_USER: dev
+      MYSQL_PASSWORD: 123456
+      MYSQL_DATABASE: shopware
+
+
+networks:
+  static-network:
+    ipam:
+      config:
+        - subnet: 172.20.0.0/16
+          ip_range: 172.28.5.0/24
