--- a/apache-php/vhosts/shopware.conf
+++ b/apache-php/vhosts/shopware.conf
@@ -1,6 +1,7 @@
-Listen 80
 <VirtualHost *:80>
     DocumentRoot "/var/www/shopware"
     ServerName shopware.dev
 
+    ErrorLog /var/log/apache-php/error.log
+    CustomLog /var/log/apache-php/access.log combined
 </VirtualHost>
