--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@
 #add repositories: plugins, themes
 #link repositories to folder
 #import and export dump
-#integrate apache config
-#use local files as volumes
 #install extensions
-#add vhost
+#logs for container to host
+#log-folder to gitignore
+#resolve servername
 
 version: '2'
 
@@ -17,6 +17,7 @@ services:
         ipv4_address: 172.20.128.2
     volumes:
       - ./repositories/shopware:/var/www/shopware
+      - ./apache-php/logs:/var/logs/apache-php
 
   db:
     image: mysql
