made php settings

--- a/apache-php/dockerfile
+++ b/apache-php/dockerfile
@@ -22,3 +22,10 @@ RUN apt-get update && \
             docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/  &&  \
             docker-php-ext-install gd
 RUN docker-php-ext-install zip
+
+#php-settings
+RUN touch /usr/local/etc/php/conf.d/uploads.ini \
+    && echo "upload_max_filesize = 10M;" >> /usr/local/etc/php/conf.d/uploads.ini
+RUN touch /usr/local/etc/php/conf.d/uploads.ini \
+    && echo "memory_limit = 1024M;" >> /usr/local/etc/php/conf.d/uploads.ini
+RUN a2enmod rewrite
