--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ apache-php/logs/access.log
 apache-php/logs/error.log
 repositories/themes/
 repositories/plugins/
+repositories/shopware/var/cache/*
+repositories/shopware/web/cache/*
+
