--- a/apache-php/dockerfile
+++ b/apache-php/dockerfile
@@ -2,6 +2,10 @@ FROM php:5.6.29-apache
 
 MAINTAINER Stephan Altmann <stephan@salty.rocks>
 
+#install needed tools
+RUN apt-get update && apt-get install -y \
+	wget 
+
 #create folder structure
 RUN mkdir /var/www/shopware
 RUN mkdir /var/log/apache-php
@@ -22,6 +26,15 @@ RUN apt-get update && \
             docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/  &&  \
             docker-php-ext-install gd
 RUN docker-php-ext-install zip
+
+# Install Ioncube loader
+RUN cd /tmp \
+    && wget http://downloads3.ioncube.com/loader_downloads/ioncube_loaders_lin_x86-64.tar.gz \
+    && tar -xvvzf ioncube_loaders_lin_x86-64.tar.gz \
+    && mv ioncube/ioncube_loader_lin_5.6.so /usr/local/lib/php/extensions/* \
+    && rm -Rf ioncube_loaders_lin_x86-64.tar.gz ioncube \
+    && echo "zend_extension=ioncube_loader_lin_5.6.so" > /usr/local/etc/php/conf.d/00_docker-php-ext-ioncube_loader_lin_5.6.ini
+
 
 #php-settings
 RUN touch /usr/local/etc/php/conf.d/uploads.ini \
