extended max execution time

--- a/apache-php/dockerfile
+++ b/apache-php/dockerfile
@@ -41,4 +41,6 @@ RUN touch /usr/local/etc/php/conf.d/uploads.ini \
     && echo "upload_max_filesize = 10M;" >> /usr/local/etc/php/conf.d/uploads.ini
 RUN touch /usr/local/etc/php/conf.d/uploads.ini \
     && echo "memory_limit = 1024M;" >> /usr/local/etc/php/conf.d/uploads.ini
+RUN touch /usr/local/etc/php/conf.d/uploads.ini \
+    && echo "max_execution_time = 300;" >> /usr/local/etc/php/conf.d/uploads.ini
 RUN a2enmod rewrite
