--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 apache-php/logs/access.log
 apache-php/logs/error.log
-repositories/themes/
-repositories/plugins/
+repositories/themes/*
+repositories/plugins/*
 repositories/shopware/var/cache/*
 repositories/shopware/web/cache/*
 
