--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - ./repositories/shopware:/var/www/shopware
       - ./apache-php/logs:/var/log/apache-php
+      - ./repositories/themes:/var/www/shopware/themes/Frontend
 
   db:
     image: mysql:5.7
