--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ./apache-php/logs:/var/log/apache-php
       - ./repositories/themes/Custom:/var/www/shopware/themes/Frontend/Custom
       - ./repositories/plugins:/var/www/shopware/engine/Shopware/Plugins
+      - ./apache-php/logs/apache2:/var/log/apache2
 
   db:
     image: mysql:5.7
