--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 apache-php/logs/access.log
 apache-php/logs/error.log
+apache-php/logs/apache2/*
+!apache-php/logs/apache2/gitkeep
 repositories/themes/*
 !repositories/themes/.gitkeep
 repositories/plugins/*
