--- a/apache-php/dockerfile
+++ b/apache-php/dockerfile
@@ -14,6 +14,8 @@ RUN mkdir /var/log/apache-php
 RUN chown -R www-data:www-data /var/www
 ENV APACHE_RUN_USER www-data
 ENV APACHE_RUN_GROUP www-data
+ENV APACHE_LOCK_DIR /var/lock/apache2
+ENV APACHE_RUN_DIR /var/run/apache2
 
 #add host config
 ADD vhosts/000-default.conf /etc/apache2/sites-enabled/000-default.conf
