--- a/apache-php/dockerfile
+++ b/apache-php/dockerfile
@@ -16,8 +16,8 @@ RUN mkdir /var/log/apache-php
 #set permissions
 RUN chown -R www-data:www-data /var/www
 RUN chmod -R 777 /var/www/shopware/engine/Shopware/Plugins/
-ENV APACHE_RUN_USER root
-ENV APACHE_RUN_GROUP root
+ENV APACHE_RUN_USER www-data
+ENV APACHE_RUN_GROUP www-data
 ENV APACHE_LOCK_DIR /var/lock/apache2
 ENV APACHE_RUN_DIR /var/run/apache2
 
