--- a/apache-php/vhosts/shopware.conf
+++ b/apache-php/vhosts/shopware.conf
@@ -5,3 +5,15 @@
     ErrorLog /var/log/apache-php/error.log
     CustomLog /var/log/apache-php/access.log combined
 </VirtualHost>
+
+<VirtualHost *:443>
+    DocumentRoot "/var/www/shopware"
+    ServerName shopware.test
+
+    SSLEngine on
+    SSLCertificateFile /etc/apache2/ssl/ssl.crt
+    SSLCertificateKeyFile /etc/apache2/ssl/ssl.key
+
+    ErrorLog /var/log/apache-php/error.log
+    CustomLog /var/log/apache-php/access.log combined
+</VirtualHost>
