--- a/docker-compose-mac.yml
+++ b/docker-compose-mac.yml
@@ -4,7 +4,7 @@ services:
   apache-php:
     build: ./apache-php
     volumes:
-      #- ../shopware-5.4.4:/var/www/shopware
+      - ./repositories/shopware:/var/www/shopware
       - ./apache-php/logs:/var/log/apache-php
       #- ./repositories/theme:/var/www/shopware/themes/Frontend/${THEME}
       - ./apache-php/logs/apache2:/var/log/apache2
