--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ apache-php/logs/apache2/*
 repositories/shopware/var/cache/*
 repositories/shopware/web/cache/*
 .idea/
+tmp/*
+!tmp/.gitkeep
+db-dump/*
+!db-dump/.gitkeep
